--- a/modules/_extras_.html
+++ b/modules/_extras_.html
@@ -75,6 +75,7 @@
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_extras_.led.html" class="tsd-kind-icon">LED</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_extras_.legoport.html" class="tsd-kind-icon">Lego<wbr>Port</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_extras_.powersupply.html" class="tsd-kind-icon">Power<wbr>Supply</a></li>
 							</ul>
 						</section>
@@ -112,6 +113,9 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../classes/_extras_.led.html" class="tsd-kind-icon">LED</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../classes/_extras_.legoport.html" class="tsd-kind-icon">Lego<wbr>Port</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../classes/_extras_.powersupply.html" class="tsd-kind-icon">Power<wbr>Supply</a>
